@@ -83,14 +83,10 @@
     </target>
 
     <target name="run" depends="init-common">
-       <java  fork="on"
-              failonerror="true"
-              classpath="${env.S1AS_HOME}/lib/jakartaee.jar:${env.S1AS_HOME}/lib/gf-client.jar:${build.classes.dir}:${mvn.lib.dir}/reporter.jar"
-              classname="${se.client}">
-           <sysproperty key="org.omg.CORBA.ORBInitialPort" value="${orb.port}"/>
-           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
-           <arg line="${jndiroot}"/>
-        </java>
+        <antcall target="runclient-own">
+            <param name="mainClass" value="${se.client}" />
+            <param name="args" value="${jndiroot}" />
+        </antcall>
     </target>
 
     <target name="undeploy" depends="init-common">
